# Simple-Ones

./: CMakeLists.txt  aaaa.c  buscalinearvetor.c  calculadorasimples.c  cardapio.c  carga.c  contagem.c  divisaodepareimpar.c  eleicao.c  exercicio1.c  exercicio2.c  fatorial.c  foguete.c  frequencia.c  funcaofatorial.c  funçãoteste.c  ifelse.c  imparoupar.c  intervalo.c  inversaonumeros.c  inversaovetor.c  livraria.c  main.c  maiornumero.c  maiornumeromatriz.c  maiornumerovetor.c  matrizdiagonalprincipal.c  matrizidentidade.c  matriztransposta.c  mediaemvetor.c  mediaexercicio.c  medialoop.c  mediavetorfuncao.c  mediawhile.c  menornumerovetor.c  multimatrizescalar.c  notas.c  outramedia.c  potencia.c  quadradoperfeito.c  (+11 more)
