cmake_minimum_required(VERSION 3.28)
project(Simple_Ones C)

set(CMAKE_C_STANDARD 11)

add_executable(main main.c)
add_executable(senhaacesso senhaacesso.c)
add_executable(carga carga.c)
add_executable(livraria livraria.c)
add_executable(exercicio2 exercicio2.c)
add_executable(ifelse ifelse.c)
add_executable(calculadorasimples calculadorasimples.c)
add_executable(tabuada tabuada.c)
add_executable(foguete foguete.c)
