cmake_minimum_required(VERSION 3.28)
project(Simple_Ones C)

set(CMAKE_C_STANDARD 11)

add_executable(main main.c)
add_executable(senhaacesso senhaacesso.c)
add_executable(carga carga.c)
add_executable(livraria livraria.c)
add_executable(exercicio2 exercicio2.c)
add_executable(ifelse ifelse.c)
add_executable(calculadorasimples calculadorasimples.c
        fatorial.c
        medialoop.c
        aaaa.c)
add_executable(tabuada tabuada.c)
add_executable(foguete foguete.c)
add_executable(imparoupar imparoupar.c)
add_executable(intervalo intervalo.c)
add_executable(funcaoteste funçãoteste.c)
add_executable(maiornumero maiornumero.c)
add_executable(quadradoperfeito quadradoperfeito.c)
add_executable(soma1a100 soma1a100.c)
add_executable(fatorial fatorial.c)
add_executable(medialoop medialoop.c)
add_executable(aaaa aaaa.c)
add_executable(eleicao eleicao.c)
